--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-# Dependency directories and files
+package-lock.json
 node_modules/
 dist/
-package-lock.json
-
-# IDE/Editor specific files
+coverage/
 .vscode/
 .idea/
