--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
   "name": "json-to-dto",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "description": "A TypeScript library designed for efficiently transforming JSON objects into predefined classes annotated with `@Class` and `@Prop` decorators.",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "npm run build"
   },
-  "keywords": [],
-  "author": "Rui Liang",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ppc-games/json-to-dto.git"
+  },
+  "homepage": "https://github.com/ppc-games/json-to-dto",
+  "keywords": [
+    "JSON",
+    "DTO",
+    "TypeScript",
+    "decorator",
+    "JSON Deserialize"
+  ],
+  "author": "Rui Liang <lrchljw@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.12",
@@ -16,5 +28,8 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
