--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prepare": "npm run build"
   },
   "repository": {
@@ -24,6 +25,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "coveralls": "^3.1.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
